--- a/MARVEL APP/Scenes/Home/View/Base.lproj/Home.storyboard
+++ b/MARVEL APP/Scenes/Home/View/Base.lproj/Home.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina6_7" orientation="portrait" appearance="light"/>
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
@@ -12,80 +12,78 @@
         <!--Home View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
                 <viewController storyboardIdentifier="HomeViewController" id="BYZ-38-t0r" customClass="HomeViewController" customModule="MARVEL_APP" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="guK-yg-ax2">
-                                <rect key="frame" x="8" y="119" width="412" height="773"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                            </tableView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0WK-GN-dd8" customClass="CardView" customModule="MARVEL_APP" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="0.0" width="428" height="111"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aTV-a9-iUl" customClass="CardView" customModule="MARVEL_APP" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="100"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Marvel_Studios" translatesAutoresizingMaskIntoConstraints="NO" id="TjT-rV-ZsG">
-                                        <rect key="frame" x="118" y="47" width="192" height="44"/>
-                                    </imageView>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lwW-sJ-e8c">
-                                        <rect key="frame" x="345" y="54" width="46" height="30"/>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Marvel_Studios" translatesAutoresizingMaskIntoConstraints="NO" id="ee8-3c-KHO">
+                                        <rect key="frame" x="87.5" y="30" width="200" height="40"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="46" id="rbb-ti-RhC"/>
+                                            <constraint firstAttribute="height" constant="40" id="f6N-am-J8I"/>
+                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="40" id="fRj-Xh-vOh"/>
+                                            <constraint firstAttribute="width" constant="200" id="ovi-Ga-srr"/>
+                                        </constraints>
+                                    </imageView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EJd-Wd-Vah">
+                                        <rect key="frame" x="299" y="20" width="60" height="60"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="60" id="EeI-HR-bLg"/>
+                                            <constraint firstAttribute="width" constant="60" id="NJU-X8-ISi"/>
                                         </constraints>
                                         <color key="tintColor" red="0.8078432083" green="0.0" blue="0.14458908479999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <state key="normal" title="Button"/>
                                         <buttonConfiguration key="configuration" style="plain" image="magnifyingglass" catalog="system"/>
                                         <connections>
-                                            <action selector="searchButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="WyE-cB-nsK"/>
+                                            <action selector="searchButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="VAm-PT-gt4"/>
                                         </connections>
                                     </button>
                                 </subviews>
                                 <color key="backgroundColor" red="0.1058823466" green="0.1058823466" blue="0.1058823466" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <constraints>
-                                    <constraint firstItem="TjT-rV-ZsG" firstAttribute="top" secondItem="0WK-GN-dd8" secondAttribute="top" constant="47" id="4lx-J1-yEU"/>
-                                    <constraint firstAttribute="bottom" secondItem="TjT-rV-ZsG" secondAttribute="bottom" constant="20" id="5tJ-XR-LJ7"/>
-                                    <constraint firstItem="TjT-rV-ZsG" firstAttribute="centerY" secondItem="lwW-sJ-e8c" secondAttribute="centerY" id="EqC-Zh-2zb"/>
-                                    <constraint firstAttribute="trailing" secondItem="lwW-sJ-e8c" secondAttribute="trailing" constant="37" id="FHj-SA-JXS"/>
-                                    <constraint firstItem="TjT-rV-ZsG" firstAttribute="centerX" secondItem="0WK-GN-dd8" secondAttribute="centerX" id="IH3-hr-ZXJ"/>
-                                    <constraint firstItem="lwW-sJ-e8c" firstAttribute="top" secondItem="0WK-GN-dd8" secondAttribute="top" constant="54" id="SE0-vM-UyK"/>
-                                    <constraint firstItem="lwW-sJ-e8c" firstAttribute="leading" secondItem="TjT-rV-ZsG" secondAttribute="trailing" constant="35" id="zfU-jL-Kfg"/>
+                                    <constraint firstItem="ee8-3c-KHO" firstAttribute="centerX" secondItem="aTV-a9-iUl" secondAttribute="centerX" id="QMD-wS-TBY"/>
+                                    <constraint firstItem="ee8-3c-KHO" firstAttribute="centerY" secondItem="aTV-a9-iUl" secondAttribute="centerY" id="cbA-8X-uwP"/>
+                                    <constraint firstItem="EJd-Wd-Vah" firstAttribute="centerY" secondItem="ee8-3c-KHO" secondAttribute="centerY" id="obM-AW-DDm"/>
+                                    <constraint firstAttribute="trailing" secondItem="EJd-Wd-Vah" secondAttribute="trailing" constant="16" id="sXR-aO-weY"/>
                                 </constraints>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="number" keyPath="cornerrRadius">
-                                        <real key="value" value="10"/>
+                                        <real key="value" value="15"/>
                                     </userDefinedRuntimeAttribute>
-                                    <userDefinedRuntimeAttribute type="boolean" keyPath="bottomLeft" value="YES"/>
-                                    <userDefinedRuntimeAttribute type="boolean" keyPath="topLeft" value="NO"/>
-                                    <userDefinedRuntimeAttribute type="boolean" keyPath="topRight" value="NO"/>
-                                    <userDefinedRuntimeAttribute type="boolean" keyPath="bottomRight" value="YES"/>
-                                    <userDefinedRuntimeAttribute type="boolean" keyPath="allCorners" value="NO"/>
                                 </userDefinedRuntimeAttributes>
                             </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="8Aa-Aa-01K">
+                                <rect key="frame" x="8" y="108" width="359" height="559"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="0WK-GN-dd8" firstAttribute="centerX" secondItem="guK-yg-ax2" secondAttribute="centerX" id="2iZ-ph-JuO"/>
-                            <constraint firstItem="0WK-GN-dd8" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="6mj-eT-IsP"/>
-                            <constraint firstItem="0WK-GN-dd8" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="8F2-MK-rkY"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="guK-yg-ax2" secondAttribute="trailing" constant="8" id="Nob-mo-4P8"/>
-                            <constraint firstAttribute="bottom" secondItem="0WK-GN-dd8" secondAttribute="bottom" constant="815" id="QJe-Ej-dgm"/>
-                            <constraint firstItem="guK-yg-ax2" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="8" id="QpW-7e-7Ja"/>
-                            <constraint firstItem="guK-yg-ax2" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="Xgx-lL-bSL"/>
-                            <constraint firstItem="guK-yg-ax2" firstAttribute="top" secondItem="0WK-GN-dd8" secondAttribute="bottom" constant="8" id="eBw-cJ-MRE"/>
+                            <constraint firstItem="aTV-a9-iUl" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="13b-B5-DMK"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="8Aa-Aa-01K" secondAttribute="trailing" constant="8" id="E6a-9d-qAG"/>
+                            <constraint firstItem="8Aa-Aa-01K" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="FXy-1S-F17"/>
+                            <constraint firstItem="aTV-a9-iUl" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="WQi-vZ-OPd"/>
+                            <constraint firstItem="8Aa-Aa-01K" firstAttribute="top" secondItem="aTV-a9-iUl" secondAttribute="bottom" constant="8" id="hh8-7W-KQu"/>
+                            <constraint firstItem="aTV-a9-iUl" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.15" id="nwe-Yt-9PD"/>
+                            <constraint firstItem="aTV-a9-iUl" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="qgk-su-H8l"/>
+                            <constraint firstItem="8Aa-Aa-01K" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="8" id="s9e-oZ-2sp"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="TableView" destination="guK-yg-ax2" id="Ta0-yi-4kR"/>
+                        <outlet property="TableView" destination="8Aa-Aa-01K" id="1Hq-5V-3D4"/>
                     </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="257.94392523364485" y="103.02375809935207"/>
+            <point key="canvasLocation" x="256.80000000000001" y="102.99850074962519"/>
         </scene>
     </scenes>
     <resources>
-        <image name="Marvel_Studios" width="2560" height="572"/>
+        <image name="Marvel_Studios" width="2774" height="700"/>
         <image name="magnifyingglass" catalog="system" width="128" height="117"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
