--- a/MARVEL APP/Scenes/Details/view/Details.storyboard
+++ b/MARVEL APP/Scenes/Details/view/Details.storyboard
@@ -91,17 +91,17 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Q22-fa-5Jh">
-                                                <rect key="frame" x="8" y="189.33333333333337" width="414" height="631.99999999999989"/>
+                                                <rect key="frame" x="8" y="189.33333333333337" width="414" height="632"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" verticalCompressionResistancePriority="751" text="Comics" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="e4D-Sh-ntL">
-                                                        <rect key="frame" x="0.0" y="0.0" width="412" height="24"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="414" height="24"/>
                                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                                         <color key="textColor" red="1" green="0.53725492949999998" blue="0.55686277149999996" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Job-yz-UOL">
-                                                        <rect key="frame" x="0.0" y="32" width="412" height="120"/>
+                                                        <rect key="frame" x="0.0" y="32" width="414" height="120"/>
                                                         <color key="backgroundColor" red="0.082352943720000002" green="0.109803915" blue="0.14509806040000001" alpha="0.0" colorSpace="custom" customColorSpace="displayP3"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="120" id="Y2L-az-CUV"/>
@@ -113,15 +113,19 @@
                                                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                                         </collectionViewFlowLayout>
                                                         <cells/>
+                                                        <connections>
+                                                            <outlet property="dataSource" destination="Y6W-OH-hqX" id="7SC-uC-Spb"/>
+                                                            <outlet property="delegate" destination="Y6W-OH-hqX" id="zdK-Eg-S8B"/>
+                                                        </connections>
                                                     </collectionView>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" verticalCompressionResistancePriority="751" text="Stories" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ieM-0j-WSq">
-                                                        <rect key="frame" x="0.0" y="160" width="412" height="24"/>
+                                                        <rect key="frame" x="0.0" y="160" width="414" height="24"/>
                                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                                         <color key="textColor" red="1" green="0.53725492949999998" blue="0.55686277149999996" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="LoT-NJ-Q0P">
-                                                        <rect key="frame" x="0.0" y="192" width="412" height="120"/>
+                                                        <rect key="frame" x="0.0" y="192" width="414" height="120"/>
                                                         <color key="backgroundColor" red="0.082352943720000002" green="0.109803915" blue="0.14509806040000001" alpha="0.0" colorSpace="custom" customColorSpace="displayP3"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="120" id="B2f-Tv-6Vo"/>
@@ -134,15 +138,19 @@
                                                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                                         </collectionViewFlowLayout>
                                                         <cells/>
+                                                        <connections>
+                                                            <outlet property="dataSource" destination="Y6W-OH-hqX" id="88a-Xn-xNe"/>
+                                                            <outlet property="delegate" destination="Y6W-OH-hqX" id="8DQ-3R-7Y0"/>
+                                                        </connections>
                                                     </collectionView>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" verticalCompressionResistancePriority="751" text="Series" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OHR-3m-ulQ">
-                                                        <rect key="frame" x="0.0" y="320" width="412" height="24"/>
+                                                        <rect key="frame" x="0.0" y="320" width="414" height="24"/>
                                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                                         <color key="textColor" red="1" green="0.53725492949999998" blue="0.55686277149999996" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="ib2-Bq-aA4">
-                                                        <rect key="frame" x="0.0" y="352" width="412" height="120"/>
+                                                        <rect key="frame" x="0.0" y="352" width="414" height="120"/>
                                                         <color key="backgroundColor" red="0.082352943720000002" green="0.109803915" blue="0.14509806040000001" alpha="0.0" colorSpace="custom" customColorSpace="displayP3"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="120" id="WLG-Tl-bLK"/>
@@ -155,15 +163,19 @@
                                                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                                         </collectionViewFlowLayout>
                                                         <cells/>
+                                                        <connections>
+                                                            <outlet property="dataSource" destination="Y6W-OH-hqX" id="X26-id-KhO"/>
+                                                            <outlet property="delegate" destination="Y6W-OH-hqX" id="enw-tc-I49"/>
+                                                        </connections>
                                                     </collectionView>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" verticalCompressionResistancePriority="751" text="Event" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lch-Rh-DpD">
-                                                        <rect key="frame" x="0.0" y="480" width="412" height="24"/>
+                                                        <rect key="frame" x="0.0" y="480" width="414" height="24"/>
                                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                                         <color key="textColor" red="1" green="0.53725492949999998" blue="0.55686277149999996" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="R93-Ju-wAn">
-                                                        <rect key="frame" x="0.0" y="512" width="412" height="120"/>
+                                                        <rect key="frame" x="0.0" y="512" width="414" height="120"/>
                                                         <color key="backgroundColor" red="0.082352943720000002" green="0.109803915" blue="0.14509806040000001" alpha="0.0" colorSpace="custom" customColorSpace="displayP3"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="120" id="YgR-df-3DV"/>
@@ -176,6 +188,10 @@
                                                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                                         </collectionViewFlowLayout>
                                                         <cells/>
+                                                        <connections>
+                                                            <outlet property="dataSource" destination="Y6W-OH-hqX" id="85b-na-ON0"/>
+                                                            <outlet property="delegate" destination="Y6W-OH-hqX" id="zI5-kN-8St"/>
+                                                        </connections>
                                                     </collectionView>
                                                 </subviews>
                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -183,11 +199,24 @@
                                                     <constraint firstItem="ieM-0j-WSq" firstAttribute="top" secondItem="Job-yz-UOL" secondAttribute="bottom" constant="8" id="SbQ-Sw-JOe"/>
                                                 </constraints>
                                             </stackView>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ie9-BZ-VqU">
+                                                <rect key="frame" x="358" y="8" width="64" height="50"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="50" id="WAl-KH-HHd"/>
+                                                </constraints>
+                                                <state key="normal" title="Button"/>
+                                                <buttonConfiguration key="configuration" style="plain" image="favorite2"/>
+                                                <connections>
+                                                    <action selector="favoriteButton:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="yxv-a7-C3h"/>
+                                                </connections>
+                                            </button>
                                         </subviews>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
+                                            <constraint firstItem="Ie9-BZ-VqU" firstAttribute="top" secondItem="agO-hB-2qk" secondAttribute="top" id="GNw-TR-eDi"/>
                                             <constraint firstAttribute="trailing" secondItem="ANY-Pj-INx" secondAttribute="trailing" constant="8" id="ILh-Xy-bys"/>
                                             <constraint firstItem="ANY-Pj-INx" firstAttribute="top" secondItem="agO-hB-2qk" secondAttribute="bottom" constant="8" id="Ied-63-a8n"/>
+                                            <constraint firstAttribute="trailing" secondItem="Ie9-BZ-VqU" secondAttribute="trailing" constant="8" id="Ii8-8x-6YS"/>
                                             <constraint firstItem="WiF-oB-bZI" firstAttribute="top" secondItem="ANY-Pj-INx" secondAttribute="bottom" constant="16" id="Lf1-V0-ewX"/>
                                             <constraint firstItem="agO-hB-2qk" firstAttribute="leading" secondItem="sTr-It-hLL" secondAttribute="leading" constant="8" id="Olx-jZ-HT8"/>
                                             <constraint firstItem="WiF-oB-bZI" firstAttribute="leading" secondItem="sTr-It-hLL" secondAttribute="leading" constant="8" id="PKQ-LN-Ss0"/>
@@ -237,6 +266,7 @@
                         <outlet property="DesLabel" destination="WiF-oB-bZI" id="bYF-HL-W5r"/>
                         <outlet property="DetailsImage" destination="Q2e-oi-OLd" id="e8e-Ge-pgH"/>
                         <outlet property="EventCollectionView" destination="R93-Ju-wAn" id="ofc-Ps-hzG"/>
+                        <outlet property="FavoriteButton" destination="Ie9-BZ-VqU" id="mmf-Ai-1xk"/>
                         <outlet property="SeriesCollectionView" destination="ib2-Bq-aA4" id="vX3-zu-xwf"/>
                         <outlet property="StoriesCollectionView" destination="LoT-NJ-Q0P" id="aQC-2t-822"/>
                     </connections>
@@ -371,6 +401,7 @@
     <resources>
         <image name="Iro_Man" width="1080" height="1920"/>
         <image name="chevron.backward" catalog="system" width="97" height="128"/>
+        <image name="favorite2" width="40" height="40"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
