--- a/MARVEL APP/Scenes/Home/View/Base.lproj/Home.storyboard
+++ b/MARVEL APP/Scenes/Home/View/Base.lproj/Home.storyboard
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01Y-4x-N9W">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
+        <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Home View Controller-->
+        <!--Home-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
                 <viewController storyboardIdentifier="HomeViewController" id="BYZ-38-t0r" customClass="HomeViewController" customModule="MARVEL_APP" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
@@ -22,7 +22,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="100"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Marvel_Studios" translatesAutoresizingMaskIntoConstraints="NO" id="ee8-3c-KHO">
-                                        <rect key="frame" x="87.5" y="30" width="200" height="40"/>
+                                        <rect key="frame" x="87.5" y="40" width="200" height="40"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="40" id="f6N-am-J8I"/>
                                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="40" id="fRj-Xh-vOh"/>
@@ -30,10 +30,10 @@
                                         </constraints>
                                     </imageView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EJd-Wd-Vah">
-                                        <rect key="frame" x="299" y="20" width="60" height="60"/>
+                                        <rect key="frame" x="299" y="30" width="60" height="60"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="60" id="EeI-HR-bLg"/>
-                                            <constraint firstAttribute="width" constant="60" id="NJU-X8-ISi"/>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="60" id="NJU-X8-ISi"/>
                                         </constraints>
                                         <color key="tintColor" red="0.8078432083" green="0.0" blue="0.14458908479999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <state key="normal" title="Button"/>
@@ -46,7 +46,8 @@
                                 <color key="backgroundColor" red="0.1058823466" green="0.1058823466" blue="0.1058823466" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <constraints>
                                     <constraint firstItem="ee8-3c-KHO" firstAttribute="centerX" secondItem="aTV-a9-iUl" secondAttribute="centerX" id="QMD-wS-TBY"/>
-                                    <constraint firstItem="ee8-3c-KHO" firstAttribute="centerY" secondItem="aTV-a9-iUl" secondAttribute="centerY" id="cbA-8X-uwP"/>
+                                    <constraint firstItem="EJd-Wd-Vah" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="ee8-3c-KHO" secondAttribute="trailing" constant="8" symbolic="YES" id="acv-H3-7As"/>
+                                    <constraint firstItem="ee8-3c-KHO" firstAttribute="centerY" secondItem="aTV-a9-iUl" secondAttribute="centerY" constant="10" id="cbA-8X-uwP"/>
                                     <constraint firstItem="EJd-Wd-Vah" firstAttribute="centerY" secondItem="ee8-3c-KHO" secondAttribute="centerY" id="obM-AW-DDm"/>
                                     <constraint firstAttribute="trailing" secondItem="EJd-Wd-Vah" secondAttribute="trailing" constant="16" id="sXR-aO-weY"/>
                                 </constraints>
@@ -57,7 +58,7 @@
                                 </userDefinedRuntimeAttributes>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="8Aa-Aa-01K">
-                                <rect key="frame" x="8" y="108" width="359" height="559"/>
+                                <rect key="frame" x="8" y="108" width="359" height="510"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </tableView>
                         </subviews>
@@ -66,27 +67,92 @@
                         <constraints>
                             <constraint firstItem="aTV-a9-iUl" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="13b-B5-DMK"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="8Aa-Aa-01K" secondAttribute="trailing" constant="8" id="E6a-9d-qAG"/>
-                            <constraint firstItem="8Aa-Aa-01K" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="FXy-1S-F17"/>
                             <constraint firstItem="aTV-a9-iUl" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="WQi-vZ-OPd"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="8Aa-Aa-01K" secondAttribute="bottom" id="Yez-cE-NOq"/>
                             <constraint firstItem="8Aa-Aa-01K" firstAttribute="top" secondItem="aTV-a9-iUl" secondAttribute="bottom" constant="8" id="hh8-7W-KQu"/>
                             <constraint firstItem="aTV-a9-iUl" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.15" id="nwe-Yt-9PD"/>
                             <constraint firstItem="aTV-a9-iUl" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="qgk-su-H8l"/>
                             <constraint firstItem="8Aa-Aa-01K" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="8" id="s9e-oZ-2sp"/>
                         </constraints>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Home" selectedImage="homekit" catalog="system" id="km3-Pq-lcI">
+                        <imageReference key="image" image="homekit" catalog="system" symbolScale="default" renderingMode="template"/>
+                    </tabBarItem>
                     <connections>
                         <outlet property="TableView" destination="8Aa-Aa-01K" id="1Hq-5V-3D4"/>
                     </connections>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1196" y="102.99850074962519"/>
+        </scene>
+        <!--Favourite View Controller-->
+        <scene sceneID="NDL-y6-oSK">
+            <objects>
+                <viewController id="nsh-SH-nHE" customClass="favouriteViewController" customModule="MARVEL_APP" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="hgY-xY-Uy6">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="hxE-M6-SED">
+                                <rect key="frame" x="0.0" y="49" width="375" height="569"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="nsh-SH-nHE" id="blC-G4-8zV"/>
+                                    <outlet property="delegate" destination="nsh-SH-nHE" id="iT6-5g-m0D"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="yUy-ap-EXP"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="yUy-ap-EXP" firstAttribute="bottom" secondItem="hxE-M6-SED" secondAttribute="bottom" id="1rd-Xx-k4h"/>
+                            <constraint firstItem="hxE-M6-SED" firstAttribute="leading" secondItem="yUy-ap-EXP" secondAttribute="leading" id="ZvN-Jz-ULM"/>
+                            <constraint firstItem="hxE-M6-SED" firstAttribute="centerX" secondItem="hgY-xY-Uy6" secondAttribute="centerX" id="jqM-I9-zoB"/>
+                            <constraint firstItem="hxE-M6-SED" firstAttribute="centerY" secondItem="hgY-xY-Uy6" secondAttribute="centerY" id="pbS-pv-Gjo"/>
+                            <constraint firstItem="yUy-ap-EXP" firstAttribute="trailing" secondItem="hxE-M6-SED" secondAttribute="trailing" id="prD-11-ptb"/>
+                        </constraints>
+                    </view>
+                    <tabBarItem key="tabBarItem" selectedImage="star" catalog="system" systemItem="favorites" id="lDC-Ef-JHc"/>
+                    <connections>
+                        <outlet property="favouriteTabelView" destination="hxE-M6-SED" id="7Fg-Qt-0YX"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="PxB-Kh-dQf" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="719" y="809"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="aTY-Ic-hu3">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="01Y-4x-N9W" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="yde-bX-PY6">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="selectedImageTintColor" systemColor="systemPinkColor"/>
+                        <tabBarAppearance key="standardAppearance" backgroundImageContentMode="scaleToFill"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="qqK-WT-qMe"/>
+                        <segue destination="nsh-SH-nHE" kind="relationship" relationship="viewControllers" id="Yik-SD-nen"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xlm-Ox-bpg" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="256.80000000000001" y="102.99850074962519"/>
         </scene>
     </scenes>
     <resources>
         <image name="Marvel_Studios" width="2774" height="700"/>
+        <image name="homekit" catalog="system" width="128" height="104"/>
         <image name="magnifyingglass" catalog="system" width="128" height="117"/>
+        <image name="star" catalog="system" width="128" height="116"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemPinkColor">
+            <color red="1" green="0.17647058823529413" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
