--- a/MARVEL APP/Scenes/Search/View/Cell/SearchTableViewCell.xib
+++ b/MARVEL APP/Scenes/Search/View/Cell/SearchTableViewCell.xib
@@ -35,12 +35,12 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zN4-NM-0ZO">
-                                <rect key="frame" x="292" y="30" width="64" height="50"/>
+                                <rect key="frame" x="332" y="30" width="24" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="xNh-Tt-X6r"/>
                                 </constraints>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" image="favorite2"/>
+                                <buttonConfiguration key="configuration" style="plain"/>
                                 <connections>
                                     <action selector="favoriteButton:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="0X4-PP-pot"/>
                                 </connections>
@@ -86,6 +86,5 @@
     </objects>
     <resources>
         <image name="Iro_Man" width="1080" height="1920"/>
-        <image name="favorite2" width="40" height="40"/>
     </resources>
 </document>
