--- a/MARVEL APP/Scenes/Details/view/Details.storyboard
+++ b/MARVEL APP/Scenes/Details/view/Details.storyboard
@@ -66,13 +66,10 @@
                                 <rect key="frame" x="0.0" y="221.66666666666669" width="430" height="710.33333333333326"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sTr-It-hLL">
-                                        <rect key="frame" x="0.0" y="8" width="430" height="800"/>
+                                        <rect key="frame" x="0.0" y="8" width="430" height="880"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="UItron" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="agO-hB-2qk">
-                                                <rect key="frame" x="8" y="8" width="414" height="36"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="height" constant="36" id="HF6-Yt-YRm"/>
-                                                </constraints>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="UItron" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="agO-hB-2qk">
+                                                <rect key="frame" x="8" y="8" width="342" height="36"/>
                                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
                                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <nil key="highlightedColor"/>
@@ -213,6 +210,7 @@
                                         </subviews>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
+                                            <constraint firstItem="agO-hB-2qk" firstAttribute="width" secondItem="sTr-It-hLL" secondAttribute="width" multiplier="0.795349" id="5gC-po-vwM"/>
                                             <constraint firstItem="Ie9-BZ-VqU" firstAttribute="top" secondItem="agO-hB-2qk" secondAttribute="top" id="GNw-TR-eDi"/>
                                             <constraint firstAttribute="trailing" secondItem="ANY-Pj-INx" secondAttribute="trailing" constant="8" id="ILh-Xy-bys"/>
                                             <constraint firstItem="ANY-Pj-INx" firstAttribute="top" secondItem="agO-hB-2qk" secondAttribute="bottom" constant="8" id="Ied-63-a8n"/>
@@ -223,9 +221,8 @@
                                             <constraint firstItem="Q22-fa-5Jh" firstAttribute="top" secondItem="WiF-oB-bZI" secondAttribute="bottom" constant="16" id="VK5-5g-G7n"/>
                                             <constraint firstItem="agO-hB-2qk" firstAttribute="top" secondItem="sTr-It-hLL" secondAttribute="top" constant="8" id="Ys6-a4-QNV"/>
                                             <constraint firstAttribute="trailing" secondItem="Q22-fa-5Jh" secondAttribute="trailing" constant="8" id="cuf-lE-TqA"/>
-                                            <constraint firstAttribute="height" constant="800" id="cwO-m9-3Ot"/>
+                                            <constraint firstAttribute="height" constant="880" id="cwO-m9-3Ot"/>
                                             <constraint firstItem="Q22-fa-5Jh" firstAttribute="leading" secondItem="sTr-It-hLL" secondAttribute="leading" constant="8" id="eB1-a1-bjf"/>
-                                            <constraint firstAttribute="trailing" secondItem="agO-hB-2qk" secondAttribute="trailing" constant="8" id="fEs-vg-h6p"/>
                                             <constraint firstAttribute="trailing" secondItem="WiF-oB-bZI" secondAttribute="trailing" constant="8" id="fVt-X5-GIB"/>
                                             <constraint firstItem="Q22-fa-5Jh" firstAttribute="leading" secondItem="WiF-oB-bZI" secondAttribute="leading" id="lnx-RR-SNP"/>
                                             <constraint firstItem="ANY-Pj-INx" firstAttribute="leading" secondItem="sTr-It-hLL" secondAttribute="leading" constant="8" id="zD3-JA-vsF"/>
@@ -395,7 +392,7 @@
                     <viewLayoutGuide key="safeArea" id="IZv-k2-IZV"/>
                 </stackView>
             </objects>
-            <point key="canvasLocation" x="56.521739130434788" y="-2.6785714285714284"/>
+            <point key="canvasLocation" x="55.813953488372093" y="-3.218884120171674"/>
         </scene>
     </scenes>
     <resources>
