--- a/MARVEL APP/Scenes/Details/view/Details.storyboard
+++ b/MARVEL APP/Scenes/Details/view/Details.storyboard
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_72" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -14,14 +12,14 @@
             <objects>
                 <viewController storyboardIdentifier="DetailsViewController" id="Y6W-OH-hqX" customClass="DetailsViewController" customModule="MARVEL_APP" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
-                        <rect key="frame" x="0.0" y="0.0" width="430" height="932"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Joc-Tx-TxT">
-                                <rect key="frame" x="0.0" y="0.0" width="430" height="221.66666666666666"/>
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="142.66666666666666"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Iro_Man" translatesAutoresizingMaskIntoConstraints="NO" id="Q2e-oi-OLd">
-                                        <rect key="frame" x="0.0" y="0.0" width="430" height="221.66666666666666"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="142.66666666666666"/>
                                     </imageView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hDc-Tx-SjO" userLabel="BackButton">
                                         <rect key="frame" x="0.0" y="32" width="80" height="40"/>
@@ -63,32 +61,32 @@
                                 </constraints>
                             </view>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Zyg-HC-EUs">
-                                <rect key="frame" x="0.0" y="221.66666666666669" width="430" height="710.33333333333326"/>
+                                <rect key="frame" x="0.0" y="142.66666666666666" width="600" height="457.33333333333337"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sTr-It-hLL">
-                                        <rect key="frame" x="0.0" y="8" width="430" height="880"/>
+                                        <rect key="frame" x="0.0" y="8" width="600" height="880"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="UItron" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="agO-hB-2qk">
-                                                <rect key="frame" x="8" y="8" width="342" height="36"/>
+                                                <rect key="frame" x="8" y="8" width="477.33333333333331" height="36"/>
                                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
                                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="752" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WiF-oB-bZI">
-                                                <rect key="frame" x="8" y="92.000000000000028" width="414" height="81.333333333333343"/>
+                                                <rect key="frame" x="8" y="92" width="584" height="61"/>
                                                 <string key="text">kjhghfhgfghfgdfgdddsfsdfsfkjhghfhgfghfgdfgdddsfsdfsfkjhghfhgfghfgdfgdddsfsdfsfkjhghfhgfghfgdfgdddsfsdfsfkjhghfhgfghfgdfgdddsfsdfsfkjhghfhgfghfgdfgdddsfsdfsf</string>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" verticalCompressionResistancePriority="751" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ANY-Pj-INx">
-                                                <rect key="frame" x="8" y="52.000000000000028" width="414" height="24"/>
+                                                <rect key="frame" x="8" y="52" width="584" height="24"/>
                                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                                 <color key="textColor" red="1" green="0.53725492949999998" blue="0.55686277149999996" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Q22-fa-5Jh">
-                                                <rect key="frame" x="8" y="189.33333333333337" width="414" height="632"/>
+                                                <rect key="frame" x="8" y="169" width="584" height="632"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" verticalCompressionResistancePriority="751" text="Comics" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="e4D-Sh-ntL">
                                                         <rect key="frame" x="0.0" y="0.0" width="414" height="24"/>
@@ -141,13 +139,13 @@
                                                         </connections>
                                                     </collectionView>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" verticalCompressionResistancePriority="751" text="Series" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OHR-3m-ulQ">
-                                                        <rect key="frame" x="0.0" y="320" width="414" height="24"/>
+                                                        <rect key="frame" x="0.0" y="319.99999999999994" width="414" height="24"/>
                                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                                         <color key="textColor" red="1" green="0.53725492949999998" blue="0.55686277149999996" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="ib2-Bq-aA4">
-                                                        <rect key="frame" x="0.0" y="352" width="414" height="120"/>
+                                                        <rect key="frame" x="0.0" y="351.99999999999994" width="414" height="120"/>
                                                         <color key="backgroundColor" red="0.082352943720000002" green="0.109803915" blue="0.14509806040000001" alpha="0.0" colorSpace="custom" customColorSpace="displayP3"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="120" id="WLG-Tl-bLK"/>
@@ -166,7 +164,7 @@
                                                         </connections>
                                                     </collectionView>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" verticalCompressionResistancePriority="751" text="Event" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lch-Rh-DpD">
-                                                        <rect key="frame" x="0.0" y="480" width="414" height="24"/>
+                                                        <rect key="frame" x="0.0" y="479.99999999999994" width="414" height="24"/>
                                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                                         <color key="textColor" red="1" green="0.53725492949999998" blue="0.55686277149999996" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                         <nil key="highlightedColor"/>
@@ -197,7 +195,7 @@
                                                 </constraints>
                                             </stackView>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ie9-BZ-VqU">
-                                                <rect key="frame" x="358" y="8" width="64" height="50"/>
+                                                <rect key="frame" x="528" y="8" width="64" height="50"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="50" id="WAl-KH-HHd"/>
                                                 </constraints>
@@ -257,15 +255,15 @@
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="BackButton" destination="hDc-Tx-SjO" id="cWk-vc-6UT"/>
-                        <outlet property="CharacterName" destination="agO-hB-2qk" id="rkM-9G-RXK"/>
-                        <outlet property="ComiceCollectionView" destination="Job-yz-UOL" id="YiU-XC-gts"/>
-                        <outlet property="DesLabel" destination="WiF-oB-bZI" id="bYF-HL-W5r"/>
-                        <outlet property="DetailsImage" destination="Q2e-oi-OLd" id="e8e-Ge-pgH"/>
-                        <outlet property="EventCollectionView" destination="R93-Ju-wAn" id="ofc-Ps-hzG"/>
-                        <outlet property="FavoriteButton" destination="Ie9-BZ-VqU" id="mmf-Ai-1xk"/>
-                        <outlet property="SeriesCollectionView" destination="ib2-Bq-aA4" id="vX3-zu-xwf"/>
-                        <outlet property="StoriesCollectionView" destination="LoT-NJ-Q0P" id="aQC-2t-822"/>
+                        <outlet property="backButton" destination="hDc-Tx-SjO" id="cWk-vc-6UT"/>
+                        <outlet property="characterName" destination="agO-hB-2qk" id="rkM-9G-RXK"/>
+                        <outlet property="comiceCollectionView" destination="Job-yz-UOL" id="YiU-XC-gts"/>
+                        <outlet property="desLabel" destination="WiF-oB-bZI" id="bYF-HL-W5r"/>
+                        <outlet property="detailsImage" destination="Q2e-oi-OLd" id="e8e-Ge-pgH"/>
+                        <outlet property="eventCollectionView" destination="R93-Ju-wAn" id="ofc-Ps-hzG"/>
+                        <outlet property="favoriteButton" destination="Ie9-BZ-VqU" id="mmf-Ai-1xk"/>
+                        <outlet property="seriesCollectionView" destination="ib2-Bq-aA4" id="vX3-zu-xwf"/>
+                        <outlet property="storiesCollectionView" destination="LoT-NJ-Q0P" id="aQC-2t-822"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
